FIX: 리스트 전환 메소드 변경